assets/css/style.css
#weather-display {
	margin-bottom: 15px;
	margin-top: 15px;
	background: rgb(236, 137, 8);
	width: 85%;
	color: white;
	padding: 10px;
	font-family: 'Playfair Display', serif;
  	-webkit-font-smoothing: antialiased;
  	font-weight: bold;
  	font-size: 22px;
}

#viewers {
	margin-top: 15px;
	margin-bottom: 15px;
	background: rgb(236, 137, 8);
	width: 100%;
	color: white;
	padding: 10px;
	font-family: 'Playfair Display', serif;
  	-webkit-font-smoothing: antialiased;
	font-weight: bold;
	font-size: 40px;
	height: 151px;
}

#factsDisplay {
  color: white;
  margin-top: 3%;
  margin-left: 30%;
	margin-right: 15%;
  font-family: 'Playfair Display', serif;
  -webkit-font-smoothing: antialiased;
  font-size: 173%;
}

#display-title {
  text-align: center;
  font-family: 'Rock Salt', cursive;
  color: #DE0808;
  -webkit-font-smoothing: antialiased;
  font-size: 35px;

}

#beer-display {
  margin-top: 15px;
  color: white;
  background: rgba(0, 0, 0, 0.9);
  height: 230px;
  width: 100%;
  margin-bottom: 15px;
}

.glass1 {
	  width: 2px;
    height: 100px;
  	position: absolute;
  	right: 82px;
  	top: 30px;
  	border-radius: 5px;
  	border:2px solid #fff;
}

.glass2 {
	width: 2px;
  	height: 100px;
  	position: absolute;
  	right: 48px;
  	top: 30px;
  	border-radius: 5px;
  	border:2px solid #fff;
}

.glass3 {
	width: 2px;
  	height: 100px;
  	position: absolute;
  	right: 15px;
  	top: 30px;
  	border-radius: 5px;
  	border:2px solid #fff;
}

.cup{
	  opacity: .9;
	  left: 65px;
  	width: 120px;
  	height: 162px;
  	position: absolute;
  	background: white;
  	border-radius: 0 0 20px 20px;
}

.ear{
	width: 40px;
	height: 100px;
	position: absolute;
	right: -37px;
	top: 30px;
	border-radius: 25px;
	border:15px solid #fff;

}

.beer{
	width: 100px;
	height: 150px;
	position: absolute;
	left: 0;
	right: 0;
	margin: auto;
	background: #FFC408;
	border-radius: 0 0 20px 20px;
}

.bubble{
	border: 1px solid #ffffe6;
  	background: white;
  	opacity: .98;
}

.bubble_top{
	width: 109px;
	height: 22px;
	position: absolute;
	top: 0px;
	right: -4px;
}

.bubble_circle{
	position: absolute;
	border-radius: 50%;
}

#big1{
	width: 40px;
	height: 40px;
	top: -25px;
}

#big2{
	width: 50px;
	height: 50px;
	left: 30px;
	top: -40px;
}

#big3{
	width: 20px;
	height: 20px;
	left: 20px;
	top: -40px;
}

#big4{
	width: 40px;
	height: 40px;
	right: 0;
	top: -20px;
}

#small1{
	width: 10px;
	height: 10px;
	bottom: 30px;
	left: 10px;
	animation: bobo 2s infinite;
}

#small2{
	width: 15px;
	height: 15px;
	bottom: 80px;
	left: 70px;
	animation: bobo 1s .4s infinite;
}

#small3{
	width: 10px;
	height: 10px;
	bottom: 130px;
	left: 20px;
	animation: bobo 1s .6s infinite;
}

#small4{
	width: 25px;
	height: 25px;
	bottom: 120px;
	left: 40px;
	animation: bobo 2s .9s infinite;
}

@keyframes bobo{
  from{
    bottom: 5px;
    opacity: 0;
    width: 5px;
    height: 5px;
  }

  to{
    bottom: 130px;
    opacity: .9;
    width: 20px;
    height: 20px;
  }
}

#sideTab{
	margin-top: 15px;
  margin-left: -15px;
}

#sideTab .tab-pane{
	height: 529px;
}

#sideTab .nav-pills > li > a {
    border-radius: 4px 4px 0 0 ;
}

#sideTab .tab-content {

    background: rgb(236, 137, 8);
    padding : 5px 15px;
}

.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
  background: rgb(199, 129, 24);
  color: white;
}

#submit {
	background: white;
	color: black;
}

a {
  background: rgb(199, 129, 24);
  color: white;
  -webkit-font-smoothing: antialiased;
  font-family: 'Playfair Display', serif;
  font-weight: bold;
}


#pac-input {
	background-color: #fff;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 300;
	margin-left: 12px;
	padding: 0 11px 0 13px;
	text-overflow: ellipsis;
	width: 400px;
}

#pac-input:focus {
	border-color: #4d90fe;
}

body {

}

.container {
	width: 94%;
}

#austin {
  width: 100%;
	height: 250px;
	margin-bottom: 15px;

}

#austin:hover {
  -webkit-filter: blur(2px);


}

#tap-display {
  margin-top: 15px;
  z-index: -1;
  position: relative;
  margin-left: 30%;

}

#tap {
  margin-right: 30px;
  width: 100%;
  z-index: -1;

}

#heading {
	width: 100%;
	height: 150px;
	padding: 10px;
}

.sub-text {
  margin-left: 18px;
	margin-top: -11px;
	font-size: 18px;
	font-family: 'Rock Salt', cursive;
	color: #DE0808;
}

#intro {
	border-radius: 20px;
  position: absolute;
  float: left;
  z-index: 2;
	background: rgb(236, 137, 8);
	-webkit-font-smoothing: antialiased;
  font-family: 'Playfair Display', serif;
	padding: 2%;
	margin-top: 8%;
  height: 65%;
	color: white;
  width: 40%;
}

p {
  font-size: 125%;
  margin-top: 25px;
}

#map {
	border: 1px solid black;
	margin-top: 15px;
	display: inline-block;
	height: 580px;
	width: 100%;

}

#infoMain{
	min-height: 400px;
	background: #aaa;
	margin-top: 10px;
}

#topTenBeer{
	padding: 15px;
	margin-top: 15px;
	color: white;
  font-family: 'Playfair Display', serif;
  font-size: 109%;
	display: inline-block;
	width: 100%;
}

#topTenBreweries{
	padding: 15px;
	margin-top: 15px;
	color: white;
  font-family: 'Playfair Display', serif;
	display: inline-block;
	width: 100%;
}

#searchList{
	overflow: scroll;
	width: 100%;
	height: 420px;
}

#searchList li{
	width: 97.1%;
}

h1 {
	color: black;
	-webkit-font-smoothing: antialiased;
	font-size: 50px;
	font-family: 'Playfair Display', serif;
	margin-top: 0px;
	width: 100%;
}

h2 {
	margin-top: 0px;
  font-weight: bold;
  font-family: 'Playfair Display', serif;
	font-size: 185%;
}

h3 {
	margin-top: 0px;
}

h4 {
	font-family: 'Playfair Display', serif;
  	-webkit-font-smoothing: antialiased;
	font-weight: bold;
	font-size: 22px;
}

#topTen {
  font-size: 35px;
  font-weight: bold;
  font-family: 'Playfair Display', serif;
  -webkit-font-smoothing: antialiased;
  color: black;
  text-decoration: underline;
}

.breweryLi{
	margin: 5px;
	background-color: white;
	color: black;
}

.btn {
	width: 100%;
}

#infoMain {
	padding: 20px;
	background: rgb(236, 137, 8);
	color: white;
	-webkit-font-smoothing: antialiased;
  font-family: 'Playfair Display', serif;
	font-size: 12px;
	border-radius: 0;
	margin-bottom: 15px;
	width: 100%;
	height: 400px;
}

#infoTitle {
	font-weight: bold;
	font-size: 25px;
}

hr{
	margin: 7px;
}

.parallax-window {
    min-height: 225px;
		width: 100%;
    background: transparent;
}

footer {
	margin-top: 15px;
	width: 100%;
	height: 100px;
	background: rgb(236, 137, 8);
	color: white;
	text-align: center; 
	padding: 43px;
	font-size: 18px;
  font-family: 'Playfair Display', serif;
}

#connected-viewers {
	margin-top: 50px;
}

